tests/ivg/invalid/missing_format.ivg
// missing format directive
line 0 0 1 1
